--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,3 +8,7 @@ spring:
     url: jdbc:mysql://localhost:3306/time_deal
     username: root
     password: 1234
+  data:
+    redis:
+      host: localhost
+      port: 6379
